--- a/app.html
+++ b/app.html
@@ -1,49 +1,24 @@
 <!doctype>
 <html>
     <head>
+
         <meta charset="utf-8">
         <title>Spotironify</title>
+        <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     </head>
     <body>
         <h1>Spotironify</h1>
 
         <form>
-            <input type="search" value="alt">
-            <button>Search</button>
+            <input type="search" class="search-selector-field">
+            <button class="button-search-selector">Search</button>
         </form>
 
-        <ul>
-            <li>
-                <img src="https://i.scdn.co/image/2070dddce121c3432e5ee0495393def3451d3925">
-                <h2>This is All Yours</h2>
-                <button>See Tracks</button>
-
-<!--                 <h3>Tracks</h3>
-                <ol>
-                    <li>
-                        <p>
-                            <strong>Intro</strong>
-                            by alt-J
-                        </p>
-                        <span>2:33</span>
-                        <button>Play</button>
-                    </li>
-                    <li>
-                        <p>
-                            <strong>Arrival in Nara</strong>
-                            by alt-J
-                        </p>
-                        <span>2:33</span>
-                        <button>Play</button>
-                    </li>
-                </ol>
- -->            </li>
-            <li>
-                <img src="https://i.scdn.co/image/063355ccf09db63d4545ae62686c55503d68d6fd">
-                <h2>An Awesome Wave</h2>
-                <button>See Tracks</button>
-            </li>
+        <ul class="album-list">
+         
         </ul>
         <script src="./dist/bundle.js"></script>
     </body>
 </html>
+
+
